--- a/src/index.css
+++ b/src/index.css
@@ -3,42 +3,48 @@ body {
 }
 
 header {
-  width: 655px;
-  height: 65px;
+  width: 700px;
+  height: 132px;
   position: absolute;
-  top: 34px;
-  left: 24px;
+  top: 0px;
+  left: 0px;
+  -webkit-app-region: drag;
 }
 
 .title {
   position: absolute;
-  left: 20px;
+  top: 34px;
+  left: 30px;
 }
 
 .button-min {
   position: absolute;
-  left: 485px;
+  top: 34px;
+  left: 510px;
+  -webkit-app-region: no-drag;
 }
 
 .button-close {
   position: absolute;
-  left: 570px;
+  top: 34px;
+  left: 605px;
+  -webkit-app-region: no-drag;
 }
 
 main {
-  width: 655px;
-  height: 545px;
+  width: 700px;
+  height: 568px;
   position: absolute;
   top: 132px;
-  left: 24px;
+  left: 0px;
 }
 
 .chinchilla-info {
   width: 390px;
   height: 380px;
   position: relative;
-  top: 0px;
-  left: 134px;
+  top: 5px;
+  left: 155px;
 }
 
 .chinchilla-art {
@@ -63,8 +69,8 @@ main {
   width: 568px;
   height: 112px;
   position: absolute;
-  top: 404px;
-  left: 44px;
+  top: 414px;
+  left: 66px;
   display: flex;
   align-items: center;
   gap: 40px;
