--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ main {
   left: 0px;
 }
 
-.chinchilla-info {
+.chinchillaInfo {
   width: 390px;
   height: 380px;
   position: relative;
@@ -53,25 +53,25 @@ main {
   left: 155px;
 }
 
-.chinchilla-art {
+.chinchillaArt {
   position: absolute;
   top: 0px;
   left: 45px;
 }
 
-.bubble-state {
+.bubbleState {
   position: absolute;
   top: 25px;
   left: 260px;
 }
 
-.life-bar {
+.lifeBar {
   position: absolute;
   top: 300px;
   left: 0px;
 }
 
-.buttons-actions{
+.gridbButtonsActions{
   width: 568px;
   height: 112px;
   position: absolute;
