--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,33 @@ main {
   left: 155px;
 }
 
+@keyframes floatUp {
+  0% {
+    transform: translate(0, 0) rotate(0deg);
+    opacity: 1;
+  }
+  25% {
+    transform: translate(-5px, -25px) rotate(-5deg);
+  }
+  50% {
+    transform: translate(5px, -50px) rotate(5deg);
+  }
+  75% {
+    transform: translate(-3px, -75px) rotate(-3deg);
+  }
+  100% {
+    transform: translate(0, -100px) rotate(0deg);
+    opacity: 0;
+  }
+}
+
+.float {
+  animation: floatUp 1s ease-out forwards;
+  position: absolute;
+  top: 190px;
+  left: 150px;
+}
+
 .chinchillaArt {
   position: absolute;
   top: 0px;
